syntax = "proto3";

option csharp_namespace = "Players.Backend.Gen";

service PlayersBackend {
  rpc Create (CreatePlayerProtoRequest) returns (CreatePlayerProtoResponse);
}

message CreatePlayerProtoRequest {
  string nickname = 1;
  string email = 2;
  string password = 3;
}

message CreatePlayerProtoResponse {
  string message = 1;
}
